--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,24 +1,12 @@
-.App {
-  text-align: center;
+
+#header-container {
+  background-color:#ffffff;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#logo-pic{
+  width:60%;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#color {
+  color:green;
 }
