--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,12 +1,234 @@
+/*** GOOGLE FONT ***/
+@import url('https://fonts.googleapis.com/css?family=Lora|Nothing+You+Could+Do');
 
-#header-container {
-  background-color:#ffffff;
+/** MOBILE FIRST **/
+
+/****** SMART PHONES *******/
+
+/*** Header area ***/
+
+
+  .App-header{
+    background-color: #ffffff;
+  }
+
+  #rotowheel {
+    width:25%;
+    margin:1% 40%;
+    animation: rotowheel-spin infinite 20s linear;
+  }
+
+  @keyframes rotowheel-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
 
-#logo-pic{
-  width:60%;
+  #rotalogo{
+   width:50%;
+   margin:0% 24%;
+  }
+
+  #header-title{
+    font-family:'Nothing You Could Do', cursive;
+    text-align: center;
+  }
+
+ .nav-menu {
+  list-style: none;
+  background-color:#ffccff;
+  font-family: 'Nothing You Could Do', cursive;
+  font-size: 1.5em;
+  line-height: 30%;
+  padding:1% 0%;
+  margin-left:4%;
+ }
+
+ .nav-menu li {
+  text-align: center;
+ }
+
+/*** Home Area ***/
+
+.welcome{
+  font-family: 'Nothing You Could Do', cursive;
+  font-size: 5em;
+  text-align: center;
 }
 
-#color {
-  color:green;
+.headpics {
+  border:2px solid #000000;
+  width:90%;
+  margin:0% 8%;
 }
+
+/** Footer Area **/
+.footer-area {
+margin-top: 2%;
+}
+
+#footer-content{
+  background-color:#ffccff;
+  float:left;
+  font-family: 'Nothing You Could Do', cursive;
+  text-align: center;
+  margin-left: 4%;
+
+}
+
+#heart, #sweat, #fist {
+  width:2%;
+  padding:1%;
+}
+
+/*** About Area ***/
+  .about-content{
+    font-family:'Lora', serif;
+    width:60%;
+    text-align: center;
+    margin:2% 20%;
+  }
+/*** Ebay Search ***/
+
+/*** Ebay Search Form ***/
+
+/*********TABLETS ************/
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1000px) {
+  /*** Header area ***/
+
+  .App-header{
+    background-color: #ffffff;
+  }
+
+  #rotowheel {
+    width:14%;
+    float:left;
+    margin: 2%;
+  }
+
+  #rotalogo{
+   width:25%;
+   float:left;
+   margin-left:-2%;
+   margin-top:5%;
+  }
+
+  #header-title{
+    font-family:'Nothing You Could Do', cursive;
+    margin-left: -18%;
+    margin-top: 2%;
+    font-size: 1.25em;
+    clear:both;
+  }
+
+  .nav-menu {
+  list-style: none;
+  background-color:#ffccff;
+  line-height: none;
+  float:right;
+  font-size:.75em;
+  margin-top:-16%;
+  margin-left:25%;
+  width:58%;
+  text-align:;
+ }
+
+ .nav-menu li {
+  display:inline-block;
+  margin-left:6%;
+}
+
+/*** Home Area ***/
+
+ main {
+  margin-top: 2%;
+ }
+
+ .welcome{
+  font-size:3.5em;
+}
+
+/*** Footer Area ***/
+
+.footer-area {
+margin-top: 2%;
+}
+
+}
+
+/*** DESKTOPS ***/
+
+@media only screen and (min-device-width : 1001px) and (max-device-width : 1600px) {
+
+#rotowheel {
+    width:14%;
+    float:left;
+    margin: 3%;
+  }
+
+  #rotalogo{
+   width:25%;
+   float:left;
+   margin-left:-2%;
+   margin-top:5%;
+  }
+
+  #header-title{
+    font-family:'Nothing You Could Do', cursive;
+    background-color:#ffccff;
+    margin-left: -18%;
+    margin-top: 10%;
+    font-size: 1.5em;
+    clear:both;
+  }
+
+  .nav-menu {
+  list-style: none;
+  background-color:#ffccff;
+  line-height: none;
+  float:right;
+  font-size:.75em;
+  margin-top:-16%;
+  margin-left:25%;
+  width:50%;
+  text-align:;
+ }
+
+ .nav-menu li {
+  display:inline-block;
+  margin-left:4%;
+}
+
+main {
+  margin-top: 2%;
+ }
+
+ .welcome{
+  font-size:3.5em;
+}
+
+.headpics {
+  width:75%;
+  margin-left: 12%;
+}
+
+/** Footer Area **/
+
+
+#footer-content{
+  background-color:#ffccff;
+  border-top:2px solid #000000;
+  float:left;
+  font-size: .75em;
+  margin-left: -5%;
+}
+
+#heart, #sweat, #fist {
+  width:1%;
+  padding:1%;
+}
+
+}
+/**font-family: 'Nothing You Could Do', cursive;
+font-family: 'Lora', serif; **/
+
